fix spacing and colour

--- a/res/css/views/right_panel/_BaseCard.pcss
+++ b/res/css/views/right_panel/_BaseCard.pcss
@@ -175,10 +175,12 @@ limitations under the License.
                 width: 20px;
                 height: 20px;
                 margin-right: $spacing-8;
+                color: $quaternary-content;
             }
 
+            color: $tertiary-content;
+
             .mx_BaseCard_Button_sublabel {
-                color: $tertiary-content;
                 margin-left: auto;
             }
 
