--- a/res/css/views/right_panel/_UserInfo.pcss
+++ b/res/css/views/right_panel/_UserInfo.pcss
@@ -55,7 +55,7 @@ limitations under the License.
     .mx_UserInfo_container {
         margin-top: 0;
         margin-bottom: 0;
-        padding: 0 $spacing-16 $spacing-8 $spacing-16;
+        padding: 0 $spacing-16 $spacing-24 $spacing-16;
 
         &:not(.mx_UserInfo_separator) {
             padding-top: $spacing-16;
@@ -186,6 +186,11 @@ limitations under the License.
         float: left;
         flex: 0 0 auto;
         margin: 0;
+    }
+    .mx_BaseCard_Button {
+        .mx_E2EIcon {
+            margin-right: $spacing-8;
+        }
     }
 
     .mx_UserInfo_device {
